<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DeleteCommodity</class>
 <widget class="QDialog" name="DeleteCommodity">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>502</width>
    <height>393</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>删除商品</string>
  </property>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>501</width>
     <height>371</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QComboBox" name="choice">
        <item>
         <property name="text">
          <string>请选择删除方式</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>编号</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>名称</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>分类</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>用途</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>库存量</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>仓库所在地</string>
         </property>
        </item>
        <item>
         <property name="text">
          <string>仓库编号</string>
         </property>
        </item>
       </widget>
      </item>
      <item>
       <widget class="QLineEdit" name="inputInformation">
        <property name="placeholderText">
         <string>请输入删除内容</string>
        </property>
        <property name="clearButtonEnabled">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="deleteButton">
        <property name="text">
         <string>删除</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QTableView" name="tableViewInformation"/>
    </item>
   </layout>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
